// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utility function formatSingleDigit works correctly 1`] = `
<Text>
  <Text
    style={
      Object {
        "color": "transparent",
      }
    }
  >
    0
  </Text>
  5
</Text>
`;

exports[`Utility function formatSingleDigit works correctly 2`] = `
<Text>
  10
</Text>
`;
